--- a/styles.css
+++ b/styles.css
@@ -100,8 +100,8 @@ iframe {
     padding: 1.1rem;
     padding-top:0.1rem;
     margin:0.2rem;
-    margin-left:25rem;
-    margin-right:25rem;
+    margin-left:20%;
+    margin-right:20%;
 }
 
 .resourcesinner {
